footer mockup idea

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
     </comp-header>
 
     <comp-hero bgColor="red" bgImg="img/symbol-scatter-haikei.png"></comp-hero>
+
     <comp-collections-list></comp-collections-list>
+    <comp-footer></comp-footer>
 
 
 
@@ -65,5 +67,7 @@
     <script src="component/hero.js"></script>
 
     <script src="component/collection-list.js"></script>
+
+    <script src="component/footer.js"></script>
 </body>
 </html>
